# odp-secure-services

./: Cargo.toml
ec-service-lib/: Cargo.toml
ec-service-lib/src/: message_handler.rs
ec-service-lib/src/services/: battery.rs  fw_mgmt.rs  mod.rs  notify.rs  tpm.rs
platform/qemu-sp/src/: battery.rs
qemu-sp-uart/: Cargo.toml  README.md
qemu-sp-uart/src/: lib.rs
