[package]
name = "ec-service-lib"
categories = ["embedded", "no-std"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Provides standard EC services to OS"
readme = "README.md"
keywords = ["embedded", "no-std", "boot", "firmware"]
repository = "https://github.com/OpenDevicePartnership/haf_ec_service"

[package.metadata.docs.rs]
targets = ["aarch64-unknown-none", "aarch64-unknown-none-softfloat"]

[dependencies]
uuid.workspace = true
odp-ffa.workspace = true
num_enum.workspace = true
log.workspace = true
embedded-io.workspace = true
odp-client = { workspace = true }

[target.'cfg(target_os = "none")'.dependencies]
aarch64-cpu.workspace = true

# Host-test-only deps. embedded-services + battery-service-relay pull in
# embassy-sync::ThreadModeRawMutex which is cortex_m-only — they fail to
# compile for aarch64-unknown-none[-softfloat]. The wire-format
# unit test runs on the host (where std is available, satisfying the cfg
# gate) and round-trips bytes through the EC's OWN SerializableMessage
# impl, so SP-side EcBattery code performs MANUAL serialization at runtime
# (trivial: 1-byte GetBst request payload, 4×LE-u32 response payload).
[dev-dependencies]
embedded-services.workspace = true
battery-service-relay.workspace = true
battery-service-interface.workspace = true

[features]
default = []
test-bypass-locality-check = []

[lints]
workspace = true
